--- a/music_controller/music_controller_frontend/index.html
+++ b/music_controller/music_controller_frontend/index.html
@@ -7,11 +7,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link 
+      rel="stylesheet"
+      href="./index.css"
+    />
   </head>
   <body>
-    <div id="root">
+    <div id="main">
+      <div id="root">
+        
+      </div>
     </div>
-
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
